--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				vec3 gravity = vec3(0, 1, 0) * time * speed * 0.4;
 				// todo make vec3(0, 0, -0.5) uniform direction variable
 				vec3 direction = (velocity + vec3(0, 0, -0.5)) * time * speed * 1.0;
-				vec3 pos = position + direction + pow(gravity, vec3(4.0)) * -1.0;
+				vec3 pos = position + direction + pow(gravity, vec3(5.0)) * -1.0;
 				//
 				// vec3 pos = position;
 				vec4 mvPosition = modelViewMatrix * vec4( pos, 1.0 );
@@ -117,6 +117,9 @@
 					#endif
           // gl_FragColor.rgb = mix( gl_FragColor.rgb, fogColor, fogFactor );
 					gl_FragColor = vec4( mix( color, fogColor, fogFactor ),  opacity );
+					// vec4 texColor = texture2D( texture, gl_PointCoord );
+					// gl_FragColor = vec4( mix( texColor.rgb * color, fogColor, fogFactor ), texColor.a * opacity );
+
       #endif
     }
   </script>
