--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
     </script>
 
     <!-- three.js 3d library - needs to be global for third party plugins -->
-    <script src="node_modules/three/build/three.js"></script>
+    <script src="build/three.js"></script>
 
     <!-- A polyfill for WebVR using the Device{Motion,Orientation}Event API. -->
-    <script src="node_modules/webvr-polyfill/build/webvr-polyfill.js"></script>
+    <script src="build/webvr-polyfill.js"></script>
 
     <!-- Helps enter and exit VR mode, provides best practices while in VR. -->
-    <script src="node_modules/webvr-boilerplate/build/webvr-manager.js"></script>
+    <script src="build/webvr-manager.js"></script>
 
     <!-- Our compiled scene -->
 		<script type="text/javascript" src="build/bundle.min.js"/></script>
