--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 		<title>14islands Moose Explorer - Room Scale WebVR experience</title>
 
-		<meta name="description" content="Low polygon Aeronaut experience for Vive or Cardboard using webVR and THREE.js - a 14islands hack" />
-		<meta name="keywords" content="three.js, webgl, webvr, vive, cardboard, oculus rift, 3d, animation, airplane, web development, javascript" />
+		<meta name="description" content="Low polygon WebVR experience for Vive or Cardboard using THREE.js - a 14islands hack" />
+		<meta name="keywords" content="three.js, webgl, webvr, room scale, htc vive, cardboard, daydream, oculus rift, 3d, animation, web development, javascript" />
 		<meta name="author" content="David Lindkvist for 14islands" />
 
 		<link rel="stylesheet" type="text/css" href="build/bundle.min.css" />
